fix, bugs, arreglo de controller y Swagger.yml
